--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>16x16 Grid</title>
+    <title>Dynamic Grid</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button id="grid-button">Set Grid Size</button>
     <div class="container"></div>
     <script src="script.js"></script>
 </body>
